Second version of the website

--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,9 @@
     <head>
     <title>Resume</title>
     </head>
-<body>
+  <body>
     <h1>Chuyang CHEN</h1>
     <h2>this is just an example</h2>
-    </body>
-    </html>
-    
+    <p>This is a change to see what happnes in git </p>   
+  </body>
+</html>
